@@ -496,11 +496,7 @@ static int get_username_from_cert(struct mosquitto *context)
 				return MOSQ_ERR_AUTH;
 			}
 			const char *new_username;
-#if OPENSSL_VERSION_NUMBER < 0x10100000L
-			new_username = (char *) ASN1_STRING_data(name_asn1);
-#else
 			new_username = (char *) ASN1_STRING_get0_data(name_asn1);
-#endif
 			if(mosquitto_validate_utf8(new_username, (int)strlen(new_username))){
 				if(context->protocol == mosq_p_mqtt5){
 					send__connack(context, 0, MQTT_RC_BAD_USERNAME_OR_PASSWORD, NULL);
